--- a/style.css
+++ b/style.css
@@ -69,9 +69,9 @@ nav ul li a {
 
 header {
     width: 100%;
-    background-image: url("assets/images/BG_tile.jpg");
-    /* background-repeat: no-repeat; */
-    background-size: 1fr;
+    background-image: url("assets/images/CCsite_banner.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
     grid-area: main;
     filter: drop-shadow(0px -5px 5px #280000);
 }
@@ -150,20 +150,28 @@ header {
 
 .div__features>ul {
     display: grid;
-    height: 15vh;
+    height: 5vh;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 0;
 }
 
 .div__features>h3 {
     padding: 32px 48px 32px;
-
 }
 
 .ul__features {
     list-style-type: none;
     padding: 0px 48px 32px;
+}
+
+.div__roadMap {
+    display: flex;   
+    justify-content: center;
+    padding: 32px 48px 32px;
+}
+
+#roadMap {
+    width: 100%;
 }
 
 /* FIM ABOUT FEATURES */
@@ -320,6 +328,11 @@ footer {
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 700px) {
+    
+    header {
+        background-image: url("assets/images/CCsite_banner_mobile.jpg");
+    }
+
     .mainLogo {
         margin: 20px;
         width: 65%;
