--- a/style.css
+++ b/style.css
@@ -138,6 +138,23 @@ header {
     filter: drop-shadow(0px 0px 10px #280000);
 }
 
+
+.div__video {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+
+#video {
+    cursor: pointer;
+    width: 100%;
+    border-radius: 10px;
+    border-width: 2px;
+    border-color: #D29A46;
+    filter: drop-shadow(0px 5px 5px #280000);
+}
+
+
 .div__about>h2 {
     padding: 32px 48px 0px;
 }
@@ -165,7 +182,7 @@ header {
 }
 
 .div__roadMap {
-    display: flex;   
+    display: flex;
     justify-content: center;
     padding: 32px 48px 32px;
 }
@@ -328,7 +345,7 @@ footer {
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 700px) {
-    
+
     header {
         background-image: url("assets/images/CCsite_banner_mobile.jpg");
     }
@@ -345,9 +362,10 @@ footer {
 
     .div__features>ul {
         display: grid;
-        height: 25vh;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        height: 20vh;
+        font-size: large;
+        font-weight: bold;
+        grid-template-columns: 1fr;
         grid-row-gap: 0;
     }
 
