--- a/contactstyle.css
+++ b/contactstyle.css
@@ -141,10 +141,17 @@ header {
     padding: 32px 48px 0px;
 }
 
-.div__about>p {
+.div__about> p {
     font-size: 14px;
     padding: 32px 48px 32px;
     line-height: 24px;
+}
+
+.div__about > p a {
+    text-decoration: none;
+    color: #ff0000;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 /* FIM ABOUT FEATURES */
