--- a/style.css
+++ b/style.css
@@ -209,6 +209,8 @@ input {
 }
 
 .ul__features {
+    font-weight: bold;
+    font-size: 20px;
     list-style-type: none;
     padding: 0px 48px 32px;
 }
@@ -430,12 +432,13 @@ footer {
     }
 
     .FAQ {
+        padding: 0px 50px 50px;
         height: 180vh;
     }
 
     .div__faq>ul {
         display: grid;
-        padding: 0px 50px 0px;
+        padding: 0px 10px 0px;
         grid-template-columns: 1fr;
         grid-row-gap: 30px;
     }
